Rearranged resources and setup creation of distributable using mvn assembly:single

--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,14 @@
   </repositories>
 
   <build>
+    <resources>
+        <resource>
+            <directory>src/main/resources/resources</directory>
+        </resource>
+        <resource>
+            <directory>src/main/resources</directory>
+        </resource>
+    </resources>
     <testSourceDirectory>src/test/java</testSourceDirectory>
     <testResources>
       <testResource>
