--- a/src/main/resources/resources/usergrid-basic.properties
+++ b/src/main/resources/resources/usergrid-basic.properties
@@ -52,15 +52,15 @@ usergrid.management.notify_sysadmin_of_new_admin_users=false
 # URLs
 # Redirect path when request come in for TLD
 
-usergrid.redirect_root=https://${entity.hostAddress}:8080/status
-usergrid.view.management.organizations.organization.activate=https://${entity.hostAddress}:8080/accounts/welcome
-usergrid.view.management.organizations.organization.confirm=https://${entity.hostAddress}:8080/accounts/welcome
-usergrid.view.management.users.user.activate=https://${entity.hostAddress}:8080/accounts/welcome
-usergrid.view.management.users.user.confirm=https://${entity.hostAddress}:8080/accounts/welcome
-usergrid.organization.activation.url=https://${entity.hostAddress}:8080/management/organizations/%s/activate
-usergrid.admin.activation.url=https://${entity.hostAddress}:8080/management/users/%s/activate
-usergrid.admin.resetpw.url=https://${entity.hostAddress}:8080/management/users/%s/resetpw
-usergrid.admin.confirmation.url=https://${entity.hostAddress}:8080/management/users/%s/confirm
-usergrid.user.activation.url=https://${entity.hostAddress}:8080%s/%s/users/%s/activate
-usergrid.user.confirmation.url=https://${entity.hostAddress}:8080/%s/%s/users/%s/confirm
-usergrid.user.resetpw.url=https://${entity.hostAddress}:8080/%s/%s/users/%s/resetpw
+usergrid.redirect_root=http://${entity.hostAddress}:8080/status
+usergrid.view.management.organizations.organization.activate=http://${entity.hostAddress}:8080/accounts/welcome
+usergrid.view.management.organizations.organization.confirm=http://${entity.hostAddress}:8080/accounts/welcome
+usergrid.view.management.users.user.activate=http://${entity.hostAddress}:8080/accounts/welcome
+usergrid.view.management.users.user.confirm=http://${entity.hostAddress}:8080/accounts/welcome
+usergrid.organization.activation.url=http://${entity.hostAddress}:8080/management/organizations/%s/activate
+usergrid.admin.activation.url=http://${entity.hostAddress}:8080/management/users/%s/activate
+usergrid.admin.resetpw.url=http://${entity.hostAddress}:8080/management/users/%s/resetpw
+usergrid.admin.confirmation.url=http://${entity.hostAddress}:8080/management/users/%s/confirm
+usergrid.user.activation.url=http://${entity.hostAddress}:8080%s/%s/users/%s/activate
+usergrid.user.confirmation.url=http://${entity.hostAddress}:8080/%s/%s/users/%s/confirm
+usergrid.user.resetpw.url=http://${entity.hostAddress}:8080/%s/%s/users/%s/resetpw
