--- a/src/main/resources/yaml/usergrid-clustered.yaml
+++ b/src/main/resources/yaml/usergrid-clustered.yaml
@@ -8,18 +8,21 @@ services:
         type: io.cloudsoft.usergrid.UsergridTomcatServer
         brooklyn.config:
           version: 7.0.53
+#          TODO: Awaiting reply from dev@usergrid.incubator.apache.org regarding which .war to use
+#          wars.root: http://search.maven.org/remotecontent?filepath=org/usergrid/usergrid-rest/0.0.27.1/usergrid-rest-0.0.27.1.war
           wars.root: classpath://ROOT.war
-          usergridPropertiesTemplateUrl: classpath://usergrid-clusters.properties
+          usergridPropertiesTemplateUrl: classpath://usergrid-clustered.properties
           cassandraDatacenter: $brooklyn:component("theCassandraNode") 
 - serviceType: brooklyn.entity.nosql.cassandra.CassandraDatacenter
   id: theCassandraNode
   brooklyn.config:
     initialSize: 3
-#location: localhost
+
+location: localhost
 ## Replace the line above with the following to deploy to softlayer
-location:
-  jclouds:softlayer:
-    region: ams01 # Amsterdam
+#location:
+#  jclouds:softlayer:
+#    region: ams01 # Amsterdam
 ## NOTE: You will also need the following lines in your ~/.brooklyn/brooklyn.properties
 ## brooklyn.location.jclouds.softlayer.identity=<your softlayer login name>
 ## brooklyn.location.jclouds.softlayer.credential=<your softlayer authentication key>
