--- a/src/main/resources/yaml/usergrid-clustered.yaml
+++ b/src/main/resources/yaml/usergrid-clustered.yaml
@@ -19,10 +19,21 @@ services:
     initialSize: 3
 
 location: localhost
+
 ## Replace the line above with the following to deploy to softlayer
+
 #location:
 #  jclouds:softlayer:
 #    region: ams01 # Amsterdam
 ## NOTE: You will also need the following lines in your ~/.brooklyn/brooklyn.properties
 ## brooklyn.location.jclouds.softlayer.identity=<your softlayer login name>
 ## brooklyn.location.jclouds.softlayer.credential=<your softlayer authentication key>
+
+## Or to Amazon EC2
+
+#location:
+#  jclouds:aws-ec2:
+#    region: us-west-1
+## NOTE: You will also need the following lines in your ~/.brooklyn/brooklyn.properties
+## brooklyn.location.jclouds.aws-ec2.identity=<your aws access key id>
+## brooklyn.location.jclouds.aws-ec2.credential=<your aws secret access key>
