--- a/src/main/resources/resources/usergrid-clustered.properties
+++ b/src/main/resources/resources/usergrid-clustered.properties
@@ -2,7 +2,7 @@ cassandra.cluster=UGCluster
 
 cassandra.url=${entity.cassandraUrl}
 
-cassandra.keyspace.strategy=org.apache.cassandra.locator.NetworkTopologyStrategy
+cassandra.keyspace.strategy=org.apache.cassandra.locator.SimpleStrategy
 #US east and US west replication of cassandra
 #cassandra.keyspace.strategy.options.us-east=3
 #cassandra.keyspace.strategy.options.us-west=3
@@ -26,6 +26,7 @@ usergrid.sysadmin.login.name=superuser
 usergrid.sysadmin.login.email=myself@example.com
 usergrid.sysadmin.login.password=pw123
 usergrid.sysadmin.login.allowed=true
+usergrid.sysadmin.email=myself@example.com
 
 usergrid.sysadmin.email=myself@example.com
 usergrid.sysadmin.approve.users=false
@@ -50,15 +51,15 @@ usergrid.management.admin_users_require_confirmation=false
 cassandra.connections=45
 
 
-usergrid.redirect_root=http://${entity.hostAddress}:8080/status
-usergrid.view.management.organizations.organization.activate=http://${entity.hostAddress}:8080/accounts/welcome
-usergrid.view.management.organizations.organization.confirm=http://${entity.hostAddress}:8080/accounts/welcome
-usergrid.view.management.users.user.activate=http://${entity.hostAddress}:8080/accounts/welcome
-usergrid.view.management.users.user.confirm=http://${entity.hostAddress}:8080/accounts/welcome
-usergrid.organization.activation.url=http://${entity.hostAddress}:8080/management/organizations/%s/activate
-usergrid.admin.activation.url=http://${entity.hostAddress}:8080/management/users/%s/activate
-usergrid.admin.resetpw.url=http://${entity.hostAddress}:8080/management/users/%s/resetpw
-usergrid.admin.confirmation.url=http://${entity.hostAddress}:8080/management/users/%s/confirm
-usergrid.user.activation.url=http://${entity.hostAddress}:8080%s/%s/users/%s/activate
-usergrid.user.confirmation.url=http://${entity.hostAddress}:8080/%s/%s/users/%s/confirm
-usergrid.user.resetpw.url=http://${entity.hostAddress}:8080/%s/%s/users/%s/resetpw
+usergrid.redirect_root=/status
+usergrid.view.management.organizations.organization.activate=/accounts/welcome
+usergrid.view.management.organizations.organization.confirm=/accounts/welcome
+usergrid.view.management.users.user.activate=/accounts/welcome
+usergrid.view.management.users.user.confirm=/accounts/welcome
+usergrid.organization.activation.url=/management/organizations/%s/activate
+usergrid.admin.activation.url=/management/users/%s/activate
+usergrid.admin.resetpw.url=/management/users/%s/resetpw
+usergrid.admin.confirmation.url=/management/users/%s/confirm
+usergrid.user.activation.url=/%s/%s/users/%s/activate
+usergrid.user.confirmation.url=/%s/%s/users/%s/confirm
+usergrid.user.resetpw.url=/%s/%s/users/%s/resetpw
