--- a/src/main/resources/yaml/usergrid-basic.yaml
+++ b/src/main/resources/yaml/usergrid-basic.yaml
@@ -1,4 +1,4 @@
-name: Usergrid basic (2-host) deployment
+name: Usergrid basic (2-node) deployment
 services:
 - serviceType: io.cloudsoft.usergrid.UsergridTomcatServer
   brooklyn.config:
