--- a/pom.xml
+++ b/pom.xml
@@ -257,6 +257,19 @@
          (it has no effect unless you enter -PSonatype ) -->
     <profile>
         <id>Sonatype</id>
+        <distributionManagement>
+            <repository>
+                <id>sonatype-nexus-staging</id>
+                <name>Nexus Release Repository</name>
+                <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+            </repository>
+            <snapshotRepository>
+                <id>sonatype-nexus-snapshots</id>
+                <name>Sonatype Nexus Snapshots</name>
+                <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+            </snapshotRepository>
+        </distributionManagement>
+
         <build>
             <plugins>
                 <plugin>
